add lab evidence and traceability to master essay
Make the lab-grounded nature of the report explicit: insert a "Note on
Evidence and Lab Sources" preface after the abstract with a complete
mapping table between report sections, lab handouts, repository
artefacts, and portfolio sections; add inline (Lab N) references at
the head of each phase section in the body; expand the References
section to include all nine lab handouts and the portfolio; add a new
"Lab Traceability Appendix" with phase-by-phase mapping, lab-by-lab
deliverable summary, and provenance table for every quantitative claim.
Each row of every table is independently verifiable against committed
artefacts.